--- a/source/_posts/“无人机测绘记录（1）”.md
+++ b/source/_posts/“无人机测绘记录（1）”.md
@@ -2,8 +2,9 @@
 title: “无人机测绘记录（1）”
 date: 2018-01-09 19:27:33
 categories:
-- UGV
+- UAV
 tags:
-- UGV
+- UAV
 ---
 
+![](http://p2bv9oxkh.bkt.clouddn.com/18-1-10/77810564.jpg)
